# Pac_Man

./: .flake8  .gitignore  Makefile  README.md  git_cheatsheet.md  pac-man.py  pyproject.toml
src/config/: loader.py  models.py
src/game/: game.py  ghost.py  player.py
src/maze/: adapter.py  generator.py  models.py
tests/: test_loader.py
tests/resources/: comment.json  invalid_json.json  invalid_key.json  invalid_level.json  invalid_levels.json  invalid_lives.json  invalid_width.json  valid_config.json
