[project]
name = "pac-man"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mazegenerator",
]

[tool.uv.sources]
mazegenerator = { path = "libs/mazegenerator-2.1.0-py3-none-any.whl" }

[dependency-groups]
dev = [
    "flake8>=7.3.0",
    "flake8-docstrings>=1.7.0",
    "mypy>=2.3.0",
    "pytest>=9.1.1",
]

[tool.mypy]
exclude = ['\.venv/', 'libs/']
